--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "date-fns": "^4.1.0",
     "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
-    "motion": "^12.22.0",
+    "motion": "^12.23.11",
     "next": "15.3.4",
+    "next-transpile-modules": "^10.0.1",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
